--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -47,10 +47,8 @@ jobs:
       - uses: Swatinem/rust-cache@v1
 
       - name: Install cargo-pgx
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: cargo-pgx --git https://github.com/timescale/pgx --branch promscale-staging
+        run: |
+          ./install-cargo-pgx.sh
 
       - name: Initialize pgx
         uses: actions-rs/cargo@v1
@@ -100,10 +98,8 @@ jobs:
       - uses: Swatinem/rust-cache@v1
 
       - name: Install cargo-pgx
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: cargo-pgx --git https://github.com/timescale/pgx --branch promscale-staging
+        run: |
+          ./install-cargo-pgx.sh
 
       - name: Initialize pgx
         uses: actions-rs/cargo@v1
