--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.5.5-dev"
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [profile.release]
 panic = "unwind" # Ensures that we don't abort a Postgres process
@@ -31,8 +31,8 @@ pg_test = ["serde_json", "proptest"]
 [dependencies]
 bincode = "1.3.1"
 num_cpus = "1.13.1"
-pgx = "0.3.1"
-pgx-macros = "0.3.1"
+pgx = "0.4.5"
+pgx-macros = "0.4.5"
 proptest  = { version = "1.0.0", optional = true }
 regex = "1.5.6"
 sha2 = "0.10.2"
@@ -44,12 +44,12 @@ uluru = "3.0.0"
 askama = "0.11.0"
 
 [dev-dependencies]
-pgx-tests = "0.3.1"
+pgx-tests = "0.4.5"
 
 [patch.crates-io]
-pgx = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }
-pgx-macros = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }
-pgx-tests = { git = "https://github.com/timescale/pgx", branch = "promscale-staging" }
+pgx = { git = "https://github.com/timescale/pgx", rev = "96ece243" }
+pgx-macros = { git = "https://github.com/timescale/pgx", rev = "96ece243" }
+pgx-tests = { git = "https://github.com/timescale/pgx", rev = "96ece243" }
 
 # from e2e workspace
 test-generator = { git = "https://github.com/JamesGuthrie/test-generator" }
