makefile, docs, cargofmt and CI fixes

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -95,6 +95,7 @@ jobs:
           args: -p sql-tests
         env:
           TS_DOCKER_IMAGE: ghcr.io/timescale/dev_promscale_extension:${{steps.metadata.outputs.image_branch_name}}-ts${{matrix.tsversion}}-pg${{matrix.pgversion}}${{steps.metadata.outputs.build_type_suffix}}
+          USE_DOCKER: true
 
       - name: Check SQL Documentation
         if: ${{ matrix.pgversion == 14 && matrix.base == 'ha' }}
