--- a/test-common/Cargo.toml
+++ b/test-common/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+log = "0.4.17"
 postgres = "0.19.2"
 pretty_env_logger = "0.4"
 testcontainers = "0.14.0"
