--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,8 @@ pg_test = ["serde_json", "proptest"]
 [dependencies]
 bincode = "1.3.1"
 num_cpus = "1.13.1"
-pgx = "0.4.5"
-pgx-macros = "0.4.5"
+pgx = "0.5.0-beta.1"
+pgx-macros = "0.5.0-beta.1"
 proptest  = { version = "1.0.0", optional = true }
 regex = "1.5.6"
 sha2 = "0.10.2"
@@ -47,12 +47,12 @@ uluru = "3.0.0"
 askama = "0.11.0"
 
 [dev-dependencies]
-pgx-tests = "0.4.5"
+pgx-tests = "0.5.0-beta.1"
 
 [patch.crates-io]
-pgx = { git = "https://github.com/timescale/pgx", rev = "96ece243" }
-pgx-macros = { git = "https://github.com/timescale/pgx", rev = "96ece243" }
-pgx-tests = { git = "https://github.com/timescale/pgx", rev = "96ece243" }
+pgx = { git = "https://github.com/JamesGuthrie/pgx", rev = "7611c2c" }
+pgx-macros = { git = "https://github.com/JamesGuthrie/pgx", rev = "7611c2c" }
+pgx-tests = { git = "https://github.com/JamesGuthrie/pgx", rev = "7611c2c" }
 
 # from e2e workspace
 test-generator = { git = "https://github.com/JamesGuthrie/test-generator" }
