--- a/gendoc/Cargo.toml
+++ b/gendoc/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [dependencies]
 markdown-gen = "1.2.1"
 postgres = "0.19.2"
-test-common = "0.1.0"
+test-common = { path = "../test-common" }
 rand = "0.8.5"
