--- a/sql-tests/Cargo.toml
+++ b/sql-tests/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dev-dependencies]
 insta = "1.14.0"
 test-generator = "0.3.0"
-test-common = "0.1.0"
+test-common = { path = "../test-common" }
 
 [build-dependencies]
 build-deps = "^0.1"
