--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ panic = "unwind"
 # If your tests fail with SIGSEGV try and use 1.64 or newer.
 # Sadly, we can't just drop it because it's a workaround for
 # another issue https://github.com/tcdi/pgx/pull/208
-lto = "thin"
+#lto = "thin"
 
 [features]
 default = ["pg14", "serde_json", "proptest"] # used by rust-analyzer in VSCode
