Add build artifact for RHEL 8
So far we were build rpms for RHEL 7, lets add RHEL 8 into the list as it has been around for so long!

Signed-off-by: Arunprasad Rajkumar <ar.arunprasad@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,6 +39,12 @@ jobs:
           pkg_cloud_tags:
             - el/7
           pkg_type: rpm
+        - name: linux
+          distro: centos
+          version: 8
+          pkg_cloud_tags:
+            - el/8
+          pkg_type: rpm          
         postgres:
         - version: "12"
         - version: "13"
