--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -98,13 +98,13 @@ jobs:
           repo='timescale/timescaledb'; \
           ghopts='--draft'; \
         fi;
-        echo "::set-output name=version::${version}"
-        echo "::set-output name=tag::${tag}"
-        echo "::set-output name=filename::promscale-extension-${tag}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}.${{ matrix.arch.cpu }}.${{ matrix.os.pkg_type }}"
-        echo "::set-output name=outfile::promscale-extension-${version}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}.${{ matrix.arch.cpu }}.${{ matrix.os.pkg_type }}"
-        echo "::set-output name=repo::${repo}"
-        echo "::set-output name=ghopts::${ghopts}"
-        echo "::set-output name=image::promscale-extension:${tag}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}"
+        echo "version=${version}" >> ${GITHUB_OUTPUT}
+        echo "tag=${tag}" >> ${GITHUB_OUTPUT}
+        echo "filename=promscale-extension-${tag}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}.${{ matrix.arch.cpu }}.${{ matrix.os.pkg_type }}" >> ${GITHUB_OUTPUT}
+        echo "outfile=promscale-extension-${version}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}.${{ matrix.arch.cpu }}.${{ matrix.os.pkg_type }}" >> ${GITHUB_OUTPUT}
+        echo "repo=${repo}" >> ${GITHUB_OUTPUT}
+        echo "ghopts=${ghopts}" >> ${GITHUB_OUTPUT}
+        echo "image=promscale-extension:${tag}.pg${{ matrix.postgres.version }}.${{ matrix.os.distro }}${{ matrix.os.version }}" >> ${GITHUB_OUTPUT}
 
     - name: Setup QEMU
       uses: docker/setup-qemu-action@v2
