--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -16,6 +16,7 @@ jobs:
       branch_name: ${{steps.metadata.outputs.branch_name}}
       image_branch_name: ${{steps.metadata.outputs.image_branch_name}}
     strategy:
+      fail-fast: false
       matrix:
         pgversion:
         - 14
