Use pgtap parser to interpret test results where possible
Until now, we have used the snapshot mechanism for pgTAP tests. This
works, but adds additional steps to creating or modifying a test.

This change adds a minimal pgTAP test output parser, and applies it to
the output of our sql tests, falling back to the snapshot mechanism if
the test output is not identified as containing pgTAP output.

--- a/sql-tests/Cargo.toml
+++ b/sql-tests/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 insta = "1.14.0"
 test-generator = "0.3.0"
 test-common = { path = "../test-common" }
+pgtap-parse = { path = "../pgtap-parse" }
 
 [build-dependencies]
 build-deps = "^0.1"
