--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -179,20 +179,25 @@ jobs:
       run: |
         package_cloud push ${{ steps.metadata.outputs.repo }}/${{ matrix.os.pkg_cloud_distro || matrix.os.distro }}/${{ matrix.os.version }} artifacts/${{ steps.metadata.outputs.outfile }}; \
 
-    - name: Notify slack on build fail
-      if: github.event.schedule && failure()
-      env:
-        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-      uses: voxmedia/github-action-slack-notify-build@v1
-      with:
-        channel: C02V9U5TYE6 #team-o11y-data-platform
-        status: FAILED
-        color: danger
-
     outputs:
       tag: ${{ steps.metadata.outputs.tag }}
       version: ${{ steps.metadata.outputs.version }}
       ghopts: ${{ steps.metadata.outputs.ghopts }}
+
+  notify-release:
+    runs-on: ubuntu-latest
+    needs: package
+    if: always()
+    steps:
+      - name: Notify slack on build fail
+        if: github.event.schedule && needs.docker.result != 'success'
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel: C02V9U5TYE6 #team-o11y-data-platform
+          status: FAILED
+          color: danger
 
   release:
     runs-on: ubuntu-latest
