Test failing build

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -171,6 +171,15 @@ jobs:
       - call-connector-e2e
     runs-on: ubuntu-latest
     steps:
+      - name: Notify slack on build fail
+        if: github.event.schedule && needs.package.result != 'success'
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel_id: C02V9U5TYE6 #team-o11y-data-platform
+          status: FAILED
+          color: danger
       - name: Mark the job as a success
         if: needs.docker.result == 'success' && needs.call-connector-e2e.result == 'success'
         run: exit 0
