Only send message on scheduled build

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -172,7 +172,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Notify slack on build fail
-        if: needs.package.result != 'success'
+        if: github.event_name == 'schedule' && needs.package.result != 'success'
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
