Build arm64 packages
This commit adds support to build arm64 packages. The steps taken are
somewhat convoluted.

As GitHub doesn't offer hosted arm64 runners, we have a self-hosted
runner. For security reasons, GitHub doesn't allow self-hosted runners
to be used with public repositories. For that purpose, we have created
the `promscale_extension_private` repository, which is a private clone
of the `promscale_extension` repository.

The `release` GitHub workflow is designed to be run in _both_ the public
and private repository. In the public repository its behaviour is
unchanged. In the private repository, it uses our self-hosted arm64
runners and attempts to attach the packages to the draft release which
was created in the `promscale_extension` repository.

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -12,6 +12,7 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    if: github.repository == 'timescale/promscale_extension'
     outputs:
       branch_name: ${{steps.metadata.outputs.branch_name}}
       image_branch_name: ${{steps.metadata.outputs.image_branch_name}}
@@ -125,6 +126,7 @@ jobs:
 
   pick-connector-branch:
     name: picking connector's repo branch
+    if: github.repository == 'timescale/promscale_extension'
     runs-on: ubuntu-latest
     needs:
       - docker
@@ -165,7 +167,7 @@ jobs:
   # otherwise we have to keep updating them as we add or remove postgres versions etc.
   docker-result:
     name: docker result
-    if: always()
+    if: always() && github.repository == 'timescale/promscale_extension'
     needs:
       - docker
       - call-connector-e2e
