--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           key: ${{ matrix.postgres.version }}
+          cache-targets: "false"
 
       - name: Install cargo-pgx
         run: |
@@ -60,4 +61,3 @@ jobs:
 
       - name: Show sccache stats
         run: sccache --show-stats
-
