--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -36,6 +36,8 @@ jobs:
           sccache --show-stats
 
       - uses: Swatinem/rust-cache@v2
+        with:
+          cache-targets: "false"
 
       - name: Install cargo-pgx
         run: |
@@ -43,7 +45,7 @@ jobs:
 
       - name: Initialize pgx
         run: cargo pgx init --pg14 download
-      
+
       - run: cargo clippy --features pg14 -- -D warnings
 
   pgspot:
