let's see if CI manages to build something

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         postgres:
+        - version: "15"
         - version: "14"
         - version: "13"
         - version: "12"
