--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -24,10 +24,10 @@ jobs:
         - 13
         - 12
         tsversion:
-        - 2.9.1
+        - 2.9.1-dev
         base:
-        - ha
-        # - alpine
+        # - ha
+        - alpine
     steps:
       - uses: actions/checkout@v3
 
