Un-junkifying the ci ymls and dockerfiles. Making the switch to timscaledev/timescaledb-ha because we need to do the release on our side first, before timescale/timescaledb-ha for pg15 can be released.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -71,6 +71,7 @@ jobs:
         - version: "12"
         - version: "13"
         - version: "14"
+        - version: "15"
 
     steps:
     - name: Install PackageCloud
