--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -144,6 +144,9 @@ jobs:
         ls -la artifacts/*
 
     - name: Test package
+      # No TS packages are available for PG15 on Ubuntu bionic to run our smoke test with.
+      # TODO remove this once we drop support for Bionic
+      if: ${{ format('{0}-{1}-pg{2}', matrix.os.distro, matrix.os.version, matrix.postgres.version) != 'ubuntu-bionic-pg15' }}
       env:
         DISTRO: ${{ matrix.os.distro }}
         DISTRO_VERSION: ${{ matrix.os.version }}
