--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["test-common", "e2e", "sql-tests", "gendoc", "pgtap-parse"]
 
 [package]
 name = "promscale"
-version = "0.8.0"
+version = "0.8.1-dev"
 edition = "2018"
 
 [lib]
