--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,5 +51,5 @@ askama = "0.11.1"
 pgx-tests = "0.6.1"
 
 # from e2e workspace
-test-generator = { git = "https://github.com/JamesGuthrie/test-generator" }
+test-generator = "0.3.1"
 test-common = { path = "./test-common" }
